--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             </tr>
         </table>
         <button id="informacja">Informacja</button>
+        <div id="tresc"></div>
         <button id="repo">Repo</button>
         <button id="settings">Settings</button>
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
