--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Przykład działania GitKrakena</title>
     </head>
     <body>
+        <!-- To jest komentarz dodany w zdalnym repozytorium -->
         <h1>Interfejs użytkownika</h1>
         <img src="img/GitKraken_interface.png" alt="GitKraken interferjs">
         <h2>Toolbar – Pasek narzędziowy</h2>
